# s4s

./: README.md  dune-project  s1s.opam  s4s.opam  source1star.opam
javascript/: typechecker.js
lib/: ast.ml  ast_typed.ml  dune  ece.ml  interpreter.ml  lexer.mll  lexer_typed.mll  machine_t.ml  parse.ml  parser.mly  parser_typed.mly  pp.ml  typecheck.ml
programs/: church.js  dc1.js  dc2.js  dc3.js  dc4.js  dc5.js  dc6.js  dc7.js  dc8.js  effect1.js  effect2.js  effect3.js  effect4.js  effect5.js  effect6.js  effect7.js  map.js  prog1.js  test1.js  test4.js  test5.js
programs/typed/: dc1.s4s  dc2.s4s  dc3.s4s  dc4.s4s  dc5.s4s  dc6.s4s  dc7.s4s  dc8.s4s  dc9.s4s  prog.s4s
test/: dune
